--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,8 @@
 
 /* mixins, variables, etc. */
 /* https://wrapbootstrap.com/themes/page.2/sort.sales/order.desc */
+/* http://wrapbootstrap.com/preview/WB089478D */
+/* http://www.davidparrelli.com/sites/prestige/index-app.html# */
 
 $grayMediumLight: #eaeaea;
 
