--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="http://www.teleport-ds.com/">www.teleport-ds.com</a>
+    <a href="http://www.__________.com/">www.__________.com</a>
     All Rights Reserved, 2013. Created by <a href="http://proalab.com/" target="_blank">Proalab</a>.
   </small>
   <nav>
