--- a/app/views/static_pages/_contacts.html.erb
+++ b/app/views/static_pages/_contacts.html.erb
@@ -21,14 +21,14 @@
           </div>
           <div class="col-md-6">
             <div class="span5 offset1">
-              <h5>ProaLab LLC.</h5>
+              <h5>_____________</h5>
 
               <div class="media">
                 <div class="social-icons sicon-white pull-left">
                   <img alt="" src="/assets/phone-white.png" style="width: 23px; height: 23px; margin-top: -4px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  +38 044 384 4160 | +38 096 789 8952 | +38 066 755 2899
+                  +38 _________ | +38 _________ | +38 __________
                 </div>
               </div>
               <div class="media">
@@ -44,15 +44,7 @@
                   <img alt="" src="/assets/mail-white@2x.png" style="width: 30px; height: 30px; margin-top: -5px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  info@teleport-ds.com
-                </div>
-              </div>
-              <div class="media">
-                <div class="social-icons sicon-white pull-left">
-                  <img alt="" src="/assets/skype-white@2x.png" style="width: 30px; height: 30px; margin-top: -5px;">
-                </div>
-                <div class="media-body smallFontBy08">
-                  teleportds
+                  info@_________.com
                 </div>
               </div>
               <div class="media">
@@ -60,7 +52,7 @@
                   <img alt="" src="/assets/earth-white@2x.png" style="width: 30px; height: 30px; margin-top: -3px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  www.teleport-ds.com
+                  www.___________.com
                 </div>
               </div>
               <br>
@@ -69,10 +61,10 @@
               <h5><%= (t 'contact.get_social') %></h5>
 
               <div class="social-icons sicon-white bordered">
-                <a href="https://www.facebook.com/teleportds" target="_blank" class="sicon-facebook"><img alt="" src="/assets/facebook-white@2x.png" style="width: 32px; height: 32px;"></a>
-                <a href="https://plus.google.com/u/0/b/109901919652597210169/+Teleport-ds/posts" target="_blank" class="sicon-youtube"><img alt="" src="/assets/google-plus-white@2x.png" style="width: 32px; height: 32px;"></a>
-                <a href="https://twitter.com/TeleportDS" target="_blank" class="sicon-twitter"><img alt="" src="/assets/twitter-white@2x.png" style="width: 32px; height: 32px;"></a>
-                <a href="http://www.linkedin.com/company/teleport" target="_blank" class="sicon-linkedin"><img alt="" src="/assets/linkedin-white@2x.png" style="width: 32px; height: 32px;"></a>
+                <img alt="" src="/assets/facebook-white@2x.png" style="width: 32px; height: 32px;">
+                <img alt="" src="/assets/google-plus-white@2x.png" style="width: 32px; height: 32px;">
+                <img alt="" src="/assets/twitter-white@2x.png" style="width: 32px; height: 32px;">
+                <img alt="" src="/assets/linkedin-white@2x.png" style="width: 32px; height: 32px;">
 
               </div>
             </div>
