--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,13 +3,7 @@
 <!--About service-->
 <%= render 'static_pages/about_service' %>
 </div>
+<%= render 'static_pages/pricing' %>
 <!--Contact us-->
 <%= render 'static_pages/contacts' %>
 </br>
-<div class="container" id="registration" name="registration">
-  <div class="center jumbotron">
-    <h1><%= (t 'all.do_you_want_to_work_with_us') %></h1>
-    <%= link_to (I18n.t 'all.sign_up_now'), 'http://saas.teleport-ds.com', :target => "_blank",
-                class: "btn btn-large btn-primary" %>
-  </div>
-</div>
