--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,7 @@
 <!--About service-->
 <%= render 'static_pages/about_service' %>
 </div>
+<%= render 'static_pages/for_startup' %>
 <%= render 'static_pages/pricing' %>
 <!--Contact us-->
 <%= render 'static_pages/contacts' %>
