--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,10 @@
               <%= (I18n.t 'menu.whom_is_our_service_for') %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to (I18n.t 'menu.for_stores'), root_path + "#delivery_for_stores" %></li>
+              <li><%= link_to (I18n.t 'menu.for_startups'), root_path + "#for_startups_and_it_companies" %></li>
             </ul>
           </li>
+          <li><%= link_to (I18n.t 'menu.pricing'), root_path + "#pricing" %></li>
           <li><%= link_to (I18n.t 'menu.blog'), blogs_path + "#blog" %></li>
           <li><%= link_to (I18n.t 'menu.contact_us'), root_path + "#contact_us" %></li>
           <!--<li><%= link_to "Home", root_path %></li>-->
