--- a/app/views/static_pages/_main.html.erb
+++ b/app/views/static_pages/_main.html.erb
@@ -1,4 +1,5 @@
 <div style="background-image: url(/assets/skyscapes.jpg); width: 100%; height: 589px; background-position: initial initial; background-repeat: initial initial; background-size: cover !important;">
+  <div class="overlay">
   <div class="container">
     <div class="row">
       <div style="color: #ffffff" class="text-center">
@@ -7,4 +8,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
