many small changes

--- a/app/views/static_pages/_contacts.html.erb
+++ b/app/views/static_pages/_contacts.html.erb
@@ -4,7 +4,7 @@
     <div style="position: relative; z-index: 2;" id="contact_us" name="contact_us">
       <header>
         </br>
-        <h4 class="line-divider" style="text-align: center"><%= (t 'contact.contact') %></h4>
+        <h3 style="text-align: center; padding-bottom:10px; border-bottom: solid 1px lightgray;"><%= (t 'contact.contact') %></h3>
 
         <h1><%= (t 'contact.say_hello') %></h1>
 
