--- a/app/views/static_pages/_about_service.html.erb
+++ b/app/views/static_pages/_about_service.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'About us') %>
 <div class="row" id="about_us" name="about_us">
   </br>
-  <h4 class="line-divider" style="text-align: center"><%= (t 'menu.about_us') %></h4>
+  <h3 style="text-align: center; padding-bottom:10px; border-bottom: solid 1px lightgray;"><%= (t 'menu.about_us') %></h3>
   <div class="col-sm-12 overlay-text">
     <div class="vertical-align">
       <p class="text-justify">
