--- a/app/views/static_pages/_for_startup.html.erb
+++ b/app/views/static_pages/_for_startup.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       </br>
-      <h4 class="line-divider" style="text-align: center"><%= (t 'menu.for_startups') %></h4>
+      <h3 style="text-align: center; padding-bottom:10px; border-bottom: solid 1px lightgray;"><%= (t 'menu.for_startups') %></h3>
 
       <div class="col-md-6">
         <%= (t 'content.for_startups').html_safe %>
