--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -328,3 +328,69 @@ aside {
   opacity: .4;
   filter: alpha(opacity=40);
 }
+
+#pricing .plan .plan-title {
+  margin: 0;
+  border-radius: 7px 7px 0 0;
+  overflow: hidden;
+  text-align: center;
+  background: #f5f5f5;
+}
+
+#pricing .plan .plan-cta {
+  display: block;
+  margin: 0;
+  text-align: center;
+  border-radius: 0 0 7px 7px;
+  overflow: hidden;
+}
+
+#pricing .plan.featured {
+  padding: 1.5em 0 0;
+  margin-top: -1.5em;
+}
+
+#pricing .plan .plan-features {
+  text-align: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#pricing .plan {
+  background: white;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 7px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+#pricing .plan .plan-cta .plan-buy {
+  margin: 2em 0;
+}
+
+#pricing .plan .plan-title h3 {
+  font-weight: 200;
+  font-size: 4em;
+  line-height: 1.5em;
+  margin-top: 0;
+  color: #333333;
+}
+
+#pricing .plan .plan-title h2 {
+  padding: 1.3em 0.5em 0;
+  margin: 0;
+  font-size: 1.3em;
+  font-weight: 200;
+  text-align: center;
+  color: #7c7c7c;
+}
+
+#pricing .plan .plan-features li {
+  padding: 1.3em 0;
+  font-size: 1em;
+  font-weight: 200;
+  border-bottom: 1px solid #eaeaea;
+}
