--- a/app/views/static_pages/_pricing.html.erb
+++ b/app/views/static_pages/_pricing.html.erb
@@ -1,15 +1,15 @@
-<div id="pricing" name="pricing">
+<div id="pricing" name="pricing" class="plan">
   <div class="container">
     <div class="row">
       </br>
       <h3 style="text-align: center; padding-bottom:10px; border-bottom: solid 1px lightgray;"><%= (t 'menu.pricing') %></h3>
       <h4 style="text-align: center"><%= (t 'content.pricing') %></h4>
-
+</br>
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="plan" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
-            <h2>Beginner</h2>
-            <h3><sup>$</sup>0<sub>/ month</sub></h3>
+            <h2><%= (t 'pricing.beginer') %></h2>
+            <h3><%= (t 'pricing.beginer_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -18,7 +18,7 @@
             <li>2GB storage</li>
           </ul>
           <div class="plan-cta">
-            <p class="plan-buy"><a href="index.html" class="btn">Select plan</a></p>
+            <p class="plan-buy"><%= link_to (I18n.t 'pricing.select'), root_path + "#contact_us", class: "btn btn-primary" %></p>
           </div>
         </div>
       </div>
@@ -26,8 +26,8 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="plan featured" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
-            <h2>Advanced</h2>
-            <h3><sup>$</sup>47<sub>/ month</sub></h3>
+            <h2><%= (t 'pricing.advanced') %></h2>
+            <h3><%= (t 'pricing.advanced_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -36,7 +36,7 @@
             <li>20GB storage</li>
           </ul>
           <div class="plan-cta">
-            <p class="plan-buy"><a href="index.html" class="btn">Select plan</a></p>
+            <p class="plan-buy"><%= link_to (I18n.t 'pricing.select'), root_path + "#contact_us", class: "btn btn-info" %></p>
           </div>
         </div>
       </div>
@@ -44,8 +44,8 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="plan featured" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
-            <h2>Pro</h2>
-            <h3><sup>$</sup>147<sub>/ month</sub></h3>
+            <h2><%= (t 'pricing.pro') %></h2>
+            <h3><%= (t 'pricing.pro_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -54,7 +54,7 @@
             <li>Unlimited storage</li>
           </ul>
           <div class="plan-cta">
-            <p class="plan-buy"><a href="index.html" class="btn">Select plan</a></p>
+            <p class="plan-buy"><%= link_to (I18n.t 'pricing.select'), root_path + "#contact_us", class: "btn btn-warning" %></p>
           </div>
         </div>
       </div>
@@ -62,8 +62,8 @@
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="plan" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
-            <h2>Enterprise</h2>
-            <h3><sup>$</sup>199<sub>/ month</sub></h3>
+            <h2><%= (t 'pricing.enterprise') %></h2>
+            <h3><%= (t 'pricing.enterprise_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -72,7 +72,7 @@
             <li>Unlimited storage</li>
           </ul>
           <div class="plan-cta">
-            <p class="plan-buy"><a href="index.html" class="btn">Select plan</a></p>
+            <p class="plan-buy"><%= link_to (I18n.t 'pricing.select'), root_path + "#contact_us", class: "btn btn-success" %></p>
           </div>
         </div>
       </div>
