--- a/app/views/static_pages/_contacts.html.erb
+++ b/app/views/static_pages/_contacts.html.erb
@@ -72,8 +72,8 @@
         </div>
       </header>
     </div>
-    <div id="map-image">
+    <!--<div id="map-image">
       <img src="assets/map_bck.jpg" alt="Treble">
-    </div>
+    </div>-->
   </div>
 </div>
