--- a/app/views/static_pages/_for_startup.html.erb
+++ b/app/views/static_pages/_for_startup.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'For StartUp') %>
-<div style="background: #ededed;" id="for_startups_and_it_companies" name="for_startups_and_it_companies">
+<div style="background: #ededed; padding-bottom: 30px;" id="for_startups_and_it_companies" name="for_startups_and_it_companies">
   <div class="container">
     <div class="row">
       </br>
