--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "BestLaw Group", root_path, id: "logo" %>
-      <nav>
-        <ul class="nav nav-pills pull-right">
-              <li><%= link_to (I18n.t 'menu.about_us'), root_path + "#about_us" %></li>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+        <ul class="nav navbar-nav pull-right">
+          <li><%= link_to (I18n.t 'menu.about_us'), root_path + "#about_us" %></li>
           <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= (I18n.t 'menu.whom_is_our_service_for') %> <b class="caret"></b>
@@ -28,32 +28,7 @@
             </ul>
           </li>
         </ul>
-      </nav>
+      </div>
     </div>
   </div>
 </header>
-
-
-<nav class="navbar navbar-inverse" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
