--- a/app/views/static_pages/_contacts.html.erb
+++ b/app/views/static_pages/_contacts.html.erb
@@ -16,7 +16,7 @@
           </div>
           <div class="col-md-6">
             <p style="text-align: center">
-              <iframe frameborder="0" height="332" marginheight="0" marginwidth="0" scrolling="no" src="https://www.google.com.ua/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=ulitsa+Akademika+Krymskogo,+27%D0%90,+Kiyev,+gorod+Kiyev&amp;aq=0&amp;oq=ulitsa+Akademika+Krymskogo,+27%D0%90,+&amp;sll=48.385442,31.179199&amp;sspn=3.640705,7.866211&amp;ie=UTF8&amp;hq=&amp;hnear=ulitsa+Akademika+Krymskogo,+27%D0%90,+Kiyev,+gorod+Kiyev&amp;ll=50.465828,30.37342&amp;spn=0.013632,0.030727&amp;t=m&amp;z=14&amp;output=embed" width="520"></iframe>
+              <%= render 'contacts/form' %>
             </p>
           </div>
           <div class="col-md-6">
