many style changes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -397,3 +397,10 @@ aside {
   font-weight: 200;
   border-bottom: 1px solid #eaeaea;
 }
+
+p#notice {
+  text-align: center;
+  padding-top: 20px;
+  font-size: 20pt;
+  color: #5cb85c;
+}
