--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -6,7 +6,7 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= render 'static_pages/mobile/shim' %>
-    <%= favicon_link_tag 'teleport_16_16_0.png' %>
+    <%= favicon_link_tag 'bl_16_16.png' %>
     <!--Google Analytics-->
 
     <!--Google Analytics-->
