--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -27,7 +27,12 @@
     <%= f.label (t 'contacts.content') %><br>
     <%= f.text_area :content %>
   </div>
-  <div class="actions">
-    <%= f.submit (t 'button.ok'), class: "btn btn-sm btn-primary" %>
-  </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="contact">
+          <%= f.submit (t 'button.ok'), class: "btn btn-sm btn-primary" %>
+        </div>
+      </div>
+    </div>
+
 <% end %>
