--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing contact</h1>
-
+<h4 style="text-align: center;"><%= (t 'contacts.edit_contacts') %></h4>
 <%= render 'form' %>
-
-<%= link_to (t 'button.show'), @contact, class: "btn btn-sm btn-primary" %> |
-<%= link_to (t 'button.back'), root_path, class: "btn btn-sm btn-primary" %>
