--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12" style="text-align: center;">
 <p>
   <strong><%= (t 'contacts.name') %>:</strong>
   <%= @contact.email %>
@@ -22,8 +22,8 @@
   <%= @contact.content %>
 </p>
 
-<%= link_to (t 'button.edit'), edit_contact_path(@contact), class: "btn btn-sm btn-warning" %> |
-<%= link_to (t 'button.back'), root_path, class: "btn btn-sm btn-primary" %>
+          <%= link_to (t 'button.root'), root_path, class: "btn btn-lg btn-success" %>
+       
     </div>
   </div>
 </div>
