--- a/app/views/static_pages/_contacts.html.erb
+++ b/app/views/static_pages/_contacts.html.erb
@@ -21,14 +21,14 @@
           </div>
           <div class="col-md-6">
             <div class="span5 offset1">
-              <h5>_____________</h5>
+              <h5><%= (t 'contacts.company_name') %></h5>
 
               <div class="media">
                 <div class="social-icons sicon-white pull-left">
                   <img alt="" src="/assets/phone-white.png" style="width: 23px; height: 23px; margin-top: -4px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  +38 _________ | +38 _________ | +38 __________
+                  <%= (t 'contacts.phone') %>
                 </div>
               </div>
               <div class="media">
@@ -36,7 +36,7 @@
                   <img alt="" src="/assets/map-marker2-white@2x.png" style="width: 30px; height: 30px; margin-top: -4px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  Украина, Киев, ул. Академика Крымского, 27А
+                  <%= (t 'contacts.address') %>
                 </div>
               </div>
               <div class="media">
@@ -44,7 +44,7 @@
                   <img alt="" src="/assets/mail-white@2x.png" style="width: 30px; height: 30px; margin-top: -5px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  info@_________.com
+                  info@law-assistant.com
                 </div>
               </div>
               <div class="media">
@@ -52,7 +52,7 @@
                   <img alt="" src="/assets/earth-white@2x.png" style="width: 30px; height: 30px; margin-top: -3px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  www.___________.com
+                  www.law-assistant.com
                 </div>
               </div>
               <br>
