--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -8,7 +8,16 @@
     <%= render 'static_pages/mobile/shim' %>
     <%= favicon_link_tag 'bl_16_16.png' %>
     <!--Google Analytics-->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-51253210-1', 'law-assistant.com');
+        ga('send', 'pageview');
+
+    </script>
     <!--Google Analytics-->
   </head>
   <body>
