--- a/app/views/static_pages/_contacts.html.erb
+++ b/app/views/static_pages/_contacts.html.erb
@@ -28,7 +28,7 @@
                   <img alt="" src="/assets/phone-white.png" style="width: 23px; height: 23px; margin-top: -4px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  <%= (t 'contacts.phone') %>
+                  <%= (t 'contacts.phone_c') %>
                 </div>
               </div>
               <div class="media">
@@ -36,7 +36,7 @@
                   <img alt="" src="/assets/map-marker2-white@2x.png" style="width: 30px; height: 30px; margin-top: -4px;">
                 </div>
                 <div class="media-body smallFontBy08">
-                  <%= (t 'contacts.address') %>
+                  <%= (t 'contacts.address_c') %>
                 </div>
               </div>
               <div class="media">
