--- a/app/views/static_pages/_for_startup.html.erb
+++ b/app/views/static_pages/_for_startup.html.erb
@@ -1,4 +1,3 @@
-<% provide(:title, 'For StartUp') %>
 <div style="background: #ededed; padding-bottom: 30px;" id="for_startups_and_it_companies" name="for_startups_and_it_companies">
   <div class="container">
     <div class="row">
@@ -6,7 +5,9 @@
       <h3 style="text-align: center; padding-bottom:10px; border-bottom: solid 1px lightgray;"><%= (t 'menu.for_startups') %></h3>
 
       <div class="col-md-6">
+        <div class="vertical-align text-justify">
         <%= (t 'content.for_startups').html_safe %>
+        </div>
       </div>
       <div class="col-md-6">
         <div class="vertical-align text-justify">
