--- a/app/views/static_pages/_pricing.html.erb
+++ b/app/views/static_pages/_pricing.html.erb
@@ -3,13 +3,13 @@
     <div class="row">
       </br>
       <h3 style="text-align: center; padding-bottom:10px; border-bottom: solid 1px lightgray;"><%= (t 'menu.pricing') %></h3>
-      <h4 style="text-align: center"><%= (t 'content.pricing') %></h4>
+      <h4 style="text-align: center"><%= (t 'content.law_outsorsing') %></h4>
 </br>
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="plan" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
             <h2><%= (t 'pricing.beginer') %></h2>
-            <h3><%= (t 'pricing.beginer_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
+            <h3><%= (t 'pricing.beginer_cost') %><sup><%= (t 'pricing.uah') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -27,7 +27,7 @@
         <div class="plan featured" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
             <h2><%= (t 'pricing.advanced') %></h2>
-            <h3><%= (t 'pricing.advanced_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
+            <h3><%= (t 'pricing.advanced_cost') %><sup><%= (t 'pricing.uah') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -45,7 +45,7 @@
         <div class="plan featured" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
             <h2><%= (t 'pricing.pro') %></h2>
-            <h3><%= (t 'pricing.pro_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
+            <h3><%= (t 'pricing.pro_cost') %><sup><%= (t 'pricing.uah') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -63,7 +63,7 @@
         <div class="plan" data-scrollreveal="enter over 1s" data-scrollreveal-initialized="true" data-scrollreveal-complete="true">
           <div class="plan-title">
             <h2><%= (t 'pricing.enterprise') %></h2>
-            <h3><%= (t 'pricing.enterprise_cost') %><sup><%= (t 'pricing.currency') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
+            <h3><%= (t 'pricing.enterprise_cost') %><sup><%= (t 'pricing.uah') %></sup><sub><%= (t 'pricing.month') %></sub></h3>
           </div>
 
           <ul class="plan-features">
@@ -76,7 +76,10 @@
           </div>
         </div>
       </div>
-
+      </br>
+      <div class="col-md-12" style="padding-top: 20px; text-align: center">
+      <%= (t 'pricing.individual') %>
+      </div>
     </div>
   </div>
 </div>
