--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to (I18n.t 'menu.for_startups'), root_path + "#for_startups_and_it_companies" %></li>
+              <li><%= link_to (I18n.t 'menu.for_ecommerce'), root_path + "#for_ecommerce" %></li>
             </ul>
           </li>
           <li><%= link_to (I18n.t 'menu.pricing'), root_path + "#pricing" %></li>
