--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,7 @@
 <%= render 'static_pages/about_service' %>
 </div>
 <%= render 'static_pages/for_startup' %>
+<%= render 'static_pages/for_ecommerce' %>
 <%= render 'static_pages/pricing' %>
 </br>
 <!--Contact us-->
